--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       </div>
       <section class="aboutUs" id="section1">
         <h3>姵和婚禮</h3>
+        <h2>最重要的人就坐在身旁</h2>
         <div class="coupleInfo">
           <div class="coupleImg" data-name="人和">
             <img src="./Pic/ptrait1.png" alt="人和的照片" />
