--- a/index.html
+++ b/index.html
@@ -204,7 +204,10 @@
           <div class="swiper-scrollbar"></div>
         </div>
       </section>
-      <section class="justWhite"></section>
+      <section class="justWhite">
+        <h3>離開網站前，來找找彩蛋吧</h3>
+        <p>點擊頁尾跟頁首的照片可以一起回到過去喔 （復刻父母小彩蛋）。</p>
+      </section>
       <section class="background-img2" id="clickable-bg2">
         <div class="image" data-image="./Pic/end1.jpg"></div>
         <div class="image" data-image="./Pic/end2.jpg"></div>
@@ -700,7 +703,6 @@
           ],
         },
       ];
-   
     }
 
     window.initMap = initMap;
@@ -714,7 +716,7 @@
         center: { lat: 25.052157592312202, lng: 121.54457463878369 },
         zoom: 18,
       });
-      
+
       const imageicon = "./icon/flower_3355179.png";
       new google.maps.Marker({
         position: { lat: 25.052157592312202, lng: 121.54457463878369 },
